[gd_scene load_steps=8 format=2]

[ext_resource path="res://Menus/Sprites/Back.png" type="Texture" id=1]
[ext_resource path="res://Menus/ButtonTheme.tres" type="Theme" id=2]
[ext_resource path="res://Menus/Sprites/Hard.png" type="Texture" id=3]
[ext_resource path="res://Menus/Sprites/Normal.png" type="Texture" id=4]
[ext_resource path="res://Menus/Sprites/Zen.png" type="Texture" id=5]
[ext_resource path="res://Menus/PlayMenu.gd" type="Script" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="PlayMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 719.0
color = Color( 0.0235294, 0.027451, 0.0941176, 0.882353 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 120.0
margin_bottom = 80.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 328.0
margin_bottom = 406.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 328.0
margin_bottom = 43.0

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 126.0
margin_bottom = 43.0
icon = ExtResource( 1 )

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 328.0
margin_bottom = 127.0
custom_constants/separation = 80
custom_styles/separator = SubResource( 1 )

[node name="Normal" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 131.0
margin_right = 328.0
margin_bottom = 207.0
icon = ExtResource( 4 )

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 211.0
margin_right = 328.0
margin_bottom = 231.0
custom_constants/separation = 20
custom_styles/separator = SubResource( 1 )

[node name="Hard" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 235.0
margin_right = 328.0
margin_bottom = 297.0
icon = ExtResource( 3 )

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 301.0
margin_right = 328.0
margin_bottom = 321.0
custom_constants/separation = 20
custom_styles/separator = SubResource( 1 )

[node name="Zen" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 325.0
margin_right = 328.0
margin_bottom = 406.0
icon = ExtResource( 5 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Normal" to="." method="_on_Normal_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Hard" to="." method="_on_Hard_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Zen" to="." method="_on_Zen_pressed"]
